02-destination-rule-example/istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: myapp-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port: 
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "daniel.cifuentes.com"
